--- a/config_task1.yml
+++ b/config_task1.yml
@@ -1,30 +1,24 @@
 # experiment settings
 experiment:
-  name: 5_oct_task1_contrastive_latent10_numco6k_mllink50_plaintrans_4 # experiment name, if null experiment date used, default null
-  runs: 1   # number of runs, the results will be averaged, default 1
-  pretrain: True   # True -> pretrain the autoencoder, False -> use pretrained weights, default: False
+  name: 10oct_task1_cont_TEST # experiment name, if null experiment date used, default null
   epochs_pretrain: 10   # number of pre-training epochs, default 10
   pretrain_batch_size: 128 # batch size for contrastive learning task
   lr_pretrain: 0.001   # learning rate for pretraning, default 0.001
-  save_model: False   # save trained model, default False
   save_embedding: False   # save test set embeddings for later analysis, default False
   seed: 42
 
 # dataset
 dataset:
-  name: STL10   # CIFAR10, MNIST, STL10
+  name: STL10
 
 # directories
 dir:
-  data: null   # dataset dir, if noname tf datasets used, default noname
-  checkpoint: /cluster/scratch/goezsoy/dcgmm_checkpoints
   logging: ../logs
-  pretrain: ../pretrain
 
 
 # training settings
 training:
-  epochs: 250   #  number of epochs, default 500
+  epochs: 500   #  number of epochs, default 500
   num_constrains: 6000   # number of constrains, default 6000
   batch_size: 128   # batch size, default 128
   alpha: 10000.   # weight importance of the constraints (higher alpha, higher confidence), default 10000
@@ -41,9 +35,10 @@ training:
 
 # architecture settings
 model:
-  latent_dim: 10 # for resnet change this manually -todo-
+  contrastive: True # True for unsupervised DC-GMM, False for original DC-GMM
+  latent_dim: 10
   num_clusters: 10   # total number of labels
-  activation: null   # null, "sigmoid"
-  type: "FC"   # 'FC', 'VGG', 'ResNet', 'CNN'
-  is_unsupervised: False   # if True, do not use loss_2a_c which is about constraints, default : False
+  activation: null   # null for "FC"
+  type: "FC"   # only 'FC' in Task 1
+  vade: False   # if True, do not use loss_2a_c which is about constraints, default : False
 
