--- a/config_task2.yml
+++ b/config_task2.yml
@@ -1,32 +1,26 @@
 # experiment settings
 experiment:
-  name: 6_oct_task2_baseline_vgg6layer32_64_latent10_batch64_tanhvarcap_1 # experiment name, if null experiment date used, default null
-  runs: 1   # number of runs, the results will be averaged, default 1
-  pretrain: True   # True -> pretrain the autoencoder, False -> use pretrained weights, default: False
+  name: 11oct_task2_org_TEST # experiment name, if null experiment date used, default null
   epochs_pretrain: 10   # number of pre-training epochs, default 10
   pretrain_batch_size: 128 # batch size for contrastive learning task
   lr_pretrain: 0.001   # learning rate for pretraning, default 0.001
-  save_model: False   # save trained model, default False
   save_embedding: False   # save test set embeddings for later analysis, default False
   seed: 42
 
 # dataset
 dataset:
-  name: CIFAR10   # CIFAR10, MNIST, STL10
+  name: CIFAR10   # CIFAR10 or STL10
 
 # directories
 dir:
-  data: null   # dataset dir, if noname tf datasets used, default noname
-  checkpoint: /cluster/scratch/goezsoy/dcgmm_checkpoints
   logging: ../logs
-  pretrain: ../pretrain
 
 
 # training settings
 training:
-  epochs: 10   #  number of epochs, default 500
+  epochs: 20   #  number of epochs, default 500
   num_constrains: 6000   # number of constrains, default 6000
-  batch_size: 64   # batch size, default 128
+  batch_size: 128   # batch size, default 128
   alpha: 10000.   # weight importance of the constraints (higher alpha, higher confidence), default 10000
   q: 0   # flip probability of the labels, default 0
   learning_rate: 0.001   # learning rate, default 0.001
@@ -41,9 +35,10 @@ training:
 
 # architecture settings
 model:
-  latent_dim: 10 # for resnet change this manually -todo-
+  contrastive: False # True for unsupervised DC-GMM, False for original DC-GMM
+  latent_dim: 10 
   num_clusters: 10   # total number of labels
-  activation: "sigmoid"   # null, "sigmoid"
-  type: "VGG"   # 'FC', 'VGG', 'ResNet', 'CNN'
-  is_unsupervised: False   # if True, do not use loss_2a_c which is about constraints, default : False
+  activation: "sigmoid"   # "sigmoid" for Task 2
+  type: "VGG"   # "VGG" for task 2. please change network structure from model.py
+  vade: False   # if True, do not use loss_2a_c which is about constraints, default : False
 
